Updated seo meta

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html data-wf-page="608e4c511590b1d1e9765271" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Storipress: The best publishing and blogging platform ever</title>
-  <meta content="Build and manage a professional publication, then launch with our world-class hosting. Discover the professional platform built for publishers." name="description">
-  <meta content="Storipress: The best publishing and blogging platform ever" property="og:title">
-  <meta content="Build and manage a professional publication, then launch with our world-class hosting. Discover the professional platform built for publishers." property="og:description">
+  <title>Storipress | The WordPress alternative for publishers</title>
+  <meta content="Storipress is an all in one content management system that integrates all the tools a publisher needs in a single platform. Storipress is a publishing platform designed by publishers, for publishers." name="description">
+  <meta content="Storipress | The WordPress alternative for publishers" property="og:title">
+  <meta content="Storipress is an all in one content management system that integrates all the tools a publisher needs in a single platform. Storipress is a publishing platform designed by publishers, for publishers." property="og:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="og:image">
-  <meta content="Storipress: The best publishing and blogging platform ever" property="twitter:title">
-  <meta content="Build and manage a professional publication, then launch with our world-class hosting. Discover the professional platform built for publishers." property="twitter:description">
+  <meta content="Storipress | The WordPress alternative for publishers" property="twitter:title">
+  <meta content="Storipress is an all in one content management system that integrates all the tools a publisher needs in a single platform. Storipress is a publishing platform designed by publishers, for publishers." property="twitter:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
