Updated manage SEO

--- a/manage.html
+++ b/manage.html
@@ -3,13 +3,13 @@
 <html data-wf-page="608e4c511590b1cdc776528f" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Manage | Storipress</title>
-  <meta content="Plan, track, and manage your editorial workflow in Storipress. Customize your workflow, collaborate, and publish create content." name="description">
-  <meta content="Manage | Storipress" property="og:title">
-  <meta content="Plan, track, and manage your editorial workflow in Storipress. Customize your workflow, collaborate, and publish create content." property="og:description">
+  <title>CMS Editorial Workflow | Storipress</title>
+  <meta content="The most powerful workflow management tool for professional publishing. Capture, organize and manage your entire editorial process with Storipress. No technical knowledge required, get it up and running in minutes." name="description">
+  <meta content="CMS Editorial Workflow | Storipress" property="og:title">
+  <meta content="The most powerful workflow management tool for professional publishing. Capture, organize and manage your entire editorial process with Storipress. No technical knowledge required, get it up and running in minutes." property="og:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="og:image">
-  <meta content="Manage | Storipress" property="twitter:title">
-  <meta content="Plan, track, and manage your editorial workflow in Storipress. Customize your workflow, collaborate, and publish create content." property="twitter:description">
+  <meta content="CMS Editorial Workflow | Storipress" property="twitter:title">
+  <meta content="The most powerful workflow management tool for professional publishing. Capture, organize and manage your entire editorial process with Storipress. No technical knowledge required, get it up and running in minutes." property="twitter:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
