Updated WP Costs SEO

--- a/vs/what-wordpress-really-costs-you.html
+++ b/vs/what-wordpress-really-costs-you.html
@@ -3,12 +3,12 @@
 <html data-wf-page="608e4c511590b1abd77652e4" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>What WordPress really costs you | Storipress</title>
+  <title>WordPress' Hidden Costs | Storipress</title>
   <meta content="We know what you’re thinking: WordPress is free! But as the saying goes: there’s no such thing as a free [website platform]. With a bunch of hidden costs, Storipress is the affordable — yet more powerful alternative to WordPress." name="description">
-  <meta content="What WordPress really costs you | Storipress" property="og:title">
+  <meta content="WordPress' Hidden Costs | Storipress" property="og:title">
   <meta content="We know what you’re thinking: WordPress is free! But as the saying goes: there’s no such thing as a free [website platform]. With a bunch of hidden costs, Storipress is the affordable — yet more powerful alternative to WordPress." property="og:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="og:image">
-  <meta content="What WordPress really costs you | Storipress" property="twitter:title">
+  <meta content="WordPress' Hidden Costs | Storipress" property="twitter:title">
   <meta content="We know what you’re thinking: WordPress is free! But as the saying goes: there’s no such thing as a free [website platform]. With a bunch of hidden costs, Storipress is the affordable — yet more powerful alternative to WordPress." property="twitter:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
