udpated builder SEO

--- a/build.html
+++ b/build.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Design &amp; Build | Storipress</title>
-  <meta content="Your content is unique. Your publication should be too. Push the limits of what&#x27;s possible in web design and create unique editorial experiences that are both both professionally designed and deliver best in class performance and SEO with Storipress&#x27; intuitive block based website builder." name="description">
+  <meta content="The only site builder designed for publications, Storipress lets you build a professionally crafted publication in 5 minutes. Broadsheet publication layouts no longer need custom development and with super fast page speeds, Storipress ensures best-in-class SEO performance." name="description">
   <meta content="Design &amp; Build | Storipress" property="og:title">
-  <meta content="Your content is unique. Your publication should be too. Push the limits of what&#x27;s possible in web design and create unique editorial experiences that are both both professionally designed and deliver best in class performance and SEO with Storipress&#x27; intuitive block based website builder." property="og:description">
+  <meta content="The only site builder designed for publications, Storipress lets you build a professionally crafted publication in 5 minutes. Broadsheet publication layouts no longer need custom development and with super fast page speeds, Storipress ensures best-in-class SEO performance." property="og:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="og:image">
   <meta content="Design &amp; Build | Storipress" property="twitter:title">
-  <meta content="Your content is unique. Your publication should be too. Push the limits of what&#x27;s possible in web design and create unique editorial experiences that are both both professionally designed and deliver best in class performance and SEO with Storipress&#x27; intuitive block based website builder." property="twitter:description">
+  <meta content="The only site builder designed for publications, Storipress lets you build a professionally crafted publication in 5 minutes. Broadsheet publication layouts no longer need custom development and with super fast page speeds, Storipress ensures best-in-class SEO performance." property="twitter:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
