fixed workflow image

--- a/hosting.html
+++ b/hosting.html
@@ -411,7 +411,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h2 class="heading-10">All features</h2>
       <div class="div-block-1397">
         <a href="manage" class="other-features-parent w-inline-block">
-          <div class="other-image-parent"><img src="images/Workflow.svg" loading="lazy" alt=""></div>
+          <div class="other-image-parent"><img src="images/workflow.svg" loading="lazy" alt=""></div>
           <div class="div-block-1400">
             <h4 class="heading-11">Workflow</h4>
             <div class="text-block-45">Ditch the spreadsheet and manage your writing team efficiently.</div>
