updated medium meta

--- a/vs/medium.html
+++ b/vs/medium.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Storipress vs. Medium: Gain ownership of your content</title>
-  <meta content="Using Medium, you don&#x27;t own any of the experience and your content will ultimately be promoting Medium itself — not just your own work. Storipress offers a platform for you to build a brand around your content, empowering your content to go further." name="description">
+  <meta content="Thinking of migrating from Medium to WordPress? On the surface, that may seem like a good idea. But if you dig deeper, there are better alternatives. Read our comparison of these two platforms and discover why Storipress is a better alternative for bloggers today" name="description">
   <meta content="Storipress vs. Medium: Gain ownership of your content" property="og:title">
-  <meta content="Using Medium, you don&#x27;t own any of the experience and your content will ultimately be promoting Medium itself — not just your own work. Storipress offers a platform for you to build a brand around your content, empowering your content to go further." property="og:description">
+  <meta content="Thinking of migrating from Medium to WordPress? On the surface, that may seem like a good idea. But if you dig deeper, there are better alternatives. Read our comparison of these two platforms and discover why Storipress is a better alternative for bloggers today" property="og:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="og:image">
   <meta content="Storipress vs. Medium: Gain ownership of your content" property="twitter:title">
-  <meta content="Using Medium, you don&#x27;t own any of the experience and your content will ultimately be promoting Medium itself — not just your own work. Storipress offers a platform for you to build a brand around your content, empowering your content to go further." property="twitter:description">
+  <meta content="Thinking of migrating from Medium to WordPress? On the surface, that may seem like a good idea. But if you dig deeper, there are better alternatives. Read our comparison of these two platforms and discover why Storipress is a better alternative for bloggers today" property="twitter:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
