Updated manager SEO

--- a/manage.html
+++ b/manage.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun May 02 2021 07:29:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 06 2021 05:25:35 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608e4c511590b1cdc776528f" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CMS Editorial Workflow | Storipress</title>
-  <meta content="The most powerful workflow management tool for professional publishing. Capture, organize and manage your entire editorial process with Storipress. No technical knowledge required, get it up and running in minutes." name="description">
-  <meta content="CMS Editorial Workflow | Storipress" property="og:title">
-  <meta content="The most powerful workflow management tool for professional publishing. Capture, organize and manage your entire editorial process with Storipress. No technical knowledge required, get it up and running in minutes." property="og:description">
+  <title>CMS Editorial Workflow, Perfected | Storipress</title>
+  <meta content="The most powerful CMS editorial workflow management tool for professional publishing. Capture, organize and manage your entire editorial process with Storipress. No technical knowledge required, get it up and running in minutes." name="description">
+  <meta content="CMS Editorial Workflow, Perfected | Storipress" property="og:title">
+  <meta content="The most powerful CMS editorial workflow management tool for professional publishing. Capture, organize and manage your entire editorial process with Storipress. No technical knowledge required, get it up and running in minutes." property="og:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="og:image">
-  <meta content="CMS Editorial Workflow | Storipress" property="twitter:title">
-  <meta content="The most powerful workflow management tool for professional publishing. Capture, organize and manage your entire editorial process with Storipress. No technical knowledge required, get it up and running in minutes." property="twitter:description">
+  <meta content="CMS Editorial Workflow, Perfected | Storipress" property="twitter:title">
+  <meta content="The most powerful CMS editorial workflow management tool for professional publishing. Capture, organize and manage your entire editorial process with Storipress. No technical knowledge required, get it up and running in minutes." property="twitter:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -217,7 +217,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="feature-bounding-box manager">
       <div class="feature-hero-text-parent">
         <h1 class="feat-hero-text _1"><span class="emphasise title">Enough of this sheet.</span> Organise and manage your editorial <span class="emphasise title">2x faster.</span></h1>
-        <div class="hero-paragraph">Ah, yes. The team content spreadsheet that&#x27;s always out-of-date. Say goodbye to that — Storipress is your new single source of truth.</div>
+        <div class="hero-paragraph">Currently fighting with 5 different tools to manage your publishing Workflow? Storipress integrates all tools a publisher needs into a central platform — one change updates all systems. Storipress is your new single source of truth.</div>
         <div class="div-block-1372">
           <a href="#Footer-CTA" class="joint-beta-button w-button">Join Beta</a>
         </div>
@@ -228,7 +228,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="feature-section _5">
     <div class="feature-bounding-box _4">
       <div class="div-block-1403">
-        <h2 class="heading-8 manager-1">Advanced article management</h2>
+        <h2 class="heading-8 manager-1">Advanced editorial workflow</h2>
         <div class="text-block-46 manager">Free yourself from workflow hell. In Storipress, all unpublished articles are shown on a kanban board of drafts, reviewed, and scheduled; giving you full visibility of your production pipeline and who&#x27;s responsible for what.</div>
       </div>
       <div data-w-id="609e9c2b-f3cf-991f-0436-7c730b6fc04e" class="div-block-1404">
@@ -243,7 +243,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="feature-bounding-box _4">
       <div class="div-block-1403 _2">
         <h2 class="heading-8 manager-2">Schedule with context on a full page calendar</h2>
-        <div class="text-block-46 scheduler">Scheduling content without past publishing context is like driving blind. Storipress shows all your articles on calendar, allowing you to see everything published in the past and future, enabling better content strategy and organisation.</div>
+        <div class="text-block-46 scheduler">Scheduling content without historical context is like driving blind. Storipress shows all your articles on calendar, allowing you to see everything published in the past and future, enabling better content strategy and organisation. CMS Editorial Workflow, perfected.</div>
       </div>
       <div data-w-id="91cacccc-4518-6f1b-c957-f6ca096c9673" class="div-block-1404 manager-2">
         <div class="div-block-1413">
@@ -259,8 +259,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="more-features-parent _2">
           <div class="div-block-1398"><img src="images/Colour-Cards.svg" loading="lazy" alt="" class="image-50"></div>
           <div class="feature-double-text-parent">
-            <h3 class="heading-9">Article stage colour coding<br></h3>
-            <div class="text-block-43">Articles are colour coded by their stages: orange is draft, blue is &#x27;for editor review&#x27;, and green is &#x27;reviewed or published&#x27; for instant visualisation of your work pipeline.<br></div>
+            <h3 class="heading-9">Article stage workflow colour coding<br></h3>
+            <div class="text-block-43">Articles are colour coded by stage: orange is draft, blue is &#x27;for editor review&#x27;, and green is &#x27;reviewed or published&#x27; for instant visualisation of your team&#x27;s workflow.<br></div>
           </div>
         </div>
         <div class="more-features-parent _2">
