--- a/create.html
+++ b/create.html
@@ -217,7 +217,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="feature-bounding-box editor">
       <div class="feature-hero-text-parent">
         <h1 class="feat-hero-text _1"><span class="emphasise title">The best editor ever.</span> &quot;Google Docs on steroids.&quot;<span class="text-span-4"></span></h1>
-        <div class="hero-paragraph">A visual editor that integrates seamlessly with your SEO + editorial management tools.</div>
+        <div class="hero-paragraph">Collaborative editing, reimagined, within your publishing platform. An editing experience that integrates seamlessly with your SEO + editorial management tools.</div>
         <div class="div-block-1372">
           <a href="#Footer-CTA" class="joint-beta-button w-button">Join Beta</a>
         </div>
